fix some small layout details

--- a/resources/sass/main.css
+++ b/resources/sass/main.css
@@ -7222,7 +7222,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .cc-reference .carousel-indicators .active {
-  background-color: #378C3F;
+  background-color: #feed34;
 }
 
 .cc-reference .carousel-inner {
