--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7080,7 +7080,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .cc-reference .carousel-indicators .active {
-  background-color: #378C3F;
+  background-color: #feed34;
 }
 
 .cc-reference .carousel-inner {
